<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="481dp"
        android:layout_height="107dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:src="@drawable/connection_logo" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blackboarder"
        android:gravity="left"
        android:linksClickable="true"
        android:padding="20dp"
        android:text="@string/bloodConnectionA"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blackboarder"
        android:gravity="left"
        android:linksClickable="true"
        android:padding="20dp"
        android:text="@string/bloodConnectionB"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        android:textStyle="bold" /><![CDATA[

    />

    ]]>

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blackboarder"
        android:gravity="left"
        android:linksClickable="true"
        android:padding="20dp"
        android:text="@string/bloodConnectionAB"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:background="@drawable/blackboarder"
        android:gravity="left"
        android:linksClickable="true"
        android:padding="20dp"
        android:text="@string/bloodConnectionO"
        android:textColor="@color/text_color"
        android:textSize="19sp"
        android:textStyle="bold" />/>


</LinearLayout>