<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_bg"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240sp"

                android:src="@drawable/bp_logo" />


        </LinearLayout>

        <EditText
            android:id="@+id/input_username"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/signin_btn"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/forgotpass"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#000000" />



    </LinearLayout>

</ScrollView>