<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/pastel_pink_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/primary_dark"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="What Food to Eat Before Donating\n"
            android:textSize="25dp" />

            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/boarder"
                android:textColor="#000000"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/food1"
                android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/boarder"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/food2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/boarder"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/food3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:background="@drawable/boarder"
                android:padding="10dp"
                android:text="@string/food4"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>



        <TextView

            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/food5"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
