<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/pastel_pink_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="118dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/bp_logo" />

        <TextView
            android:id="@+id/guideline_text"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_margin="10dp"
            android:background="@drawable/boarder"
            android:backgroundTint="@color/primary_dark"
            android:gravity="left"
            android:linksClickable="true"
            android:textColor="#000000"
            android:padding="20dp"
            android:text="@string/guidedonor"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/boarder"
            android:gravity="start"
            android:padding="10dp"
            android:textColor="#000000"
            android:text="@string/info1"
            android:textSize="20sp" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/guideline_text"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_margin="10dp"
            android:background="@drawable/boarder"
            android:gravity="left"
            android:linksClickable="true"
            android:padding="20dp"
            android:text="Who cannot donate blood?"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:backgroundTint="@color/primary_dark"
            android:textStyle="bold" />

        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info2"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"/>


    </LinearLayout>
    </ScrollView>